--- a/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi.Android/Bab4_Contoh_Navigasi.Android.csproj
+++ b/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi.Android/Bab4_Contoh_Navigasi.Android.csproj
@@ -138,6 +138,9 @@
       <Name>Bab4_Contoh_Navigasi</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\home.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets" Condition="Exists('..\..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
