--- a/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/Bab4_Contoh_Navigasi.csproj
+++ b/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/Bab4_Contoh_Navigasi.csproj
@@ -48,6 +48,9 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SampleModalForm.xaml.cs">
+      <DependentUpon>SampleModalForm.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainPage.xaml">
@@ -84,6 +87,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="FormNavigasi2.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SampleModalForm.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
