--- a/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/Bab4_Contoh_Navigasi.csproj
+++ b/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/Bab4_Contoh_Navigasi.csproj
@@ -39,6 +39,9 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Contact.cs" />
+    <Compile Include="DetailContact.xaml.cs">
+      <DependentUpon>DetailContact.xaml</DependentUpon>
+    </Compile>
     <Compile Include="FormNavigasi1.xaml.cs">
       <DependentUpon>FormNavigasi1.xaml</DependentUpon>
     </Compile>
@@ -94,6 +97,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="SampleModalForm.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="DetailContact.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
