--- a/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/Bab4_Contoh_Navigasi.csproj
+++ b/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/Bab4_Contoh_Navigasi.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ActionSheetPage.xaml.cs">
+      <DependentUpon>ActionSheetPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -52,8 +55,14 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SampleAlertPage.xaml.cs">
+      <DependentUpon>SampleAlertPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SampleModalForm.xaml.cs">
       <DependentUpon>SampleModalForm.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SampleTab.xaml.cs">
+      <DependentUpon>SampleTab.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -103,6 +112,24 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="DetailContact.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SampleTab.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SampleAlertPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ActionSheetPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
