--- a/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/Bab4_Contoh_Navigasi.csproj
+++ b/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/Bab4_Contoh_Navigasi.csproj
@@ -54,6 +54,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pengguna.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleAlertPage.xaml.cs">
       <DependentUpon>SampleAlertPage.xaml</DependentUpon>
