--- a/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/Bab4_Contoh_Navigasi.csproj
+++ b/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/Bab4_Contoh_Navigasi.csproj
@@ -51,6 +51,7 @@
     <Compile Include="FormNavigasi2.xaml.cs">
       <DependentUpon>FormNavigasi2.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Global.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
