--- a/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/Bab4_Contoh_Navigasi.csproj
+++ b/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/Bab4_Contoh_Navigasi.csproj
@@ -55,9 +55,16 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PEBMasterDetailContact.xaml.cs">
+      <DependentUpon>PEBMasterDetailContact.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PEBMasterDetailMenu.xaml.cs">
+      <DependentUpon>PEBMasterDetailMenu.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PEBMasterPage.xaml.cs">
       <DependentUpon>PEBMasterPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PEBMasterPageItem.cs" />
     <Compile Include="Pengguna.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleAlertPage.xaml.cs">
@@ -141,6 +148,18 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="PEBMasterPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="PEBMasterDetailMenu.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="PEBMasterDetailContact.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
