--- a/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/Bab4_Contoh_Navigasi.csproj
+++ b/Bab4-Contoh-Navigasi/Bab4_Contoh_Navigasi/Bab4_Contoh_Navigasi.csproj
@@ -58,6 +58,9 @@
     <Compile Include="PEBMasterDetailContact.xaml.cs">
       <DependentUpon>PEBMasterDetailContact.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PEBMasterDetailHome.xaml.cs">
+      <DependentUpon>PEBMasterDetailHome.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PEBMasterDetailMenu.xaml.cs">
       <DependentUpon>PEBMasterDetailMenu.xaml</DependentUpon>
     </Compile>
@@ -160,6 +163,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="PEBMasterDetailContact.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="PEBMasterDetailHome.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
